--- a/stylesheets/template.css
+++ b/stylesheets/template.css
@@ -6,7 +6,17 @@
 	--font-color:rgb(31, 31, 31);
 	--blue:#004d85;
 	--red:#6b194d;
+
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 16px;
 }
+
+@media only screen and (max-width: 600px) {
+	:root {
+		font-size: 12px;
+	}
+}
+
 html {
 	scroll-behavior: smooth;
 }
@@ -16,11 +26,11 @@ html {
 	position: relative;
 	max-width: 60rem;
 	min-width: 30rem;
+	/* max-width: 90vw; */
 	margin: auto;
 	text-align: center;
 
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 24px;
+	
 	color: var(--font-color);
 	padding: 0;
 }
